[package]
name = "log-write"
version = "0.1.0"
authors = ["mambisi <lilbizi96@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
nix = "0.22.1"
anyhow = "1.0.43"
lazy_static = "1.4.0"
ioctls = "0.6.1"
clap = "2.33.3"
derivative = "2.2.0"